# computational_geometry_course

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  main.cpp
demo/: CMakeLists.txt  ex01.cpp
include/: GeoUtils.hpp  Point.h  Point.hpp  Vector.hpp
prim_lib/include/: Core.hpp  GeoUtils.hpp  Intersection.hpp  Line.hpp  LineSegment.hpp  Plane.hpp  Vector.hpp
prim_lib/src/: CMakeLists.txt  GeoUtils.cpp  Intersection.cpp  Vector.cpp
